# job-sentinel

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  badgereq.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml  security-scan.yml
NORTH_STAR/: index.html
RELEASING/: index.html
adr/001-use-uv-package-manager/: index.html
adr/002-004-design-decisions/: index.html
api/telegram-setup/: index.html
audit/2026-06-12-quality-audit/: index.html
deployment/: index.html
design/HLD/: index.html
design/LLD/: index.html
design/adapter-authoring/: index.html
design/web-ui/: index.html
docs/: GROWTH.md  NORTH_STAR.md  RELEASING.md  compliance.md  deployment.md  index.md  launch-posts.md  llm-providers.md
docs/adr/: 001-use-uv-package-manager.md  002-004-design-decisions.md  005-job-source-layer.md  006-ai-personalization-and-data-strategy.md
docs/api/: telegram-setup.md
docs/audit/: 2026-06-12-quality-audit.md
docs/design/: HLD.md  LLD.md  adapter-authoring.md  web-ui.md
docs/research/: competitive-analysis.md
extension/: README.md  manifest.json  popup.css  popup.html  popup.js
research/competitive-analysis/: index.html
scripts/: check_licenses.py  install.ps1  install.sh
search/: search_index.json
src/job_sentinel/: __main__.py
src/job_sentinel/adapters/: base.py  registry.py
src/job_sentinel/adapters/sites/: handshake.py  twelve_twenty.py
src/job_sentinel/api/: __init__.py  app.py  auth.py  chat.py  ops.py
src/job_sentinel/bot/: handlers.py
src/job_sentinel/config/: logging.py  settings.py
src/job_sentinel/core/: browser.py  deadlines.py  models.py  scheduler.py  session.py  text.py
src/job_sentinel/db/: repository.py
src/job_sentinel/documents/: __init__.py  coverletter.py  embeddings.py  latex.py  llm.py  match.py  providers.py  renderer.py  resume_import.py  semantic.py  tailor.py
src/job_sentinel/documents/templates/: coverletter.tex.j2  resume.tex.j2
src/job_sentinel/notifiers/: discord.py  email.py  telegram.py
src/job_sentinel/profile/: __init__.py  models.py  store.py
src/job_sentinel/sources/: __init__.py  adzuna.py  arbeitnow.py  base.py  company_boards.py  himalayas.py  jobspy_source.py  registry.py  remoteok.py  search.py  themuse.py  usajobs.py  wellfound.py
tests/integration/: test_scheduler_cycle.py
tests/unit/test_adapters/: test_base.py  test_custom_loader.py  test_handshake.py  test_registry.py  test_twelve_twenty.py  test_twelve_twenty_flow.py
tests/unit/test_api/: test_app.py  test_app_auth.py  test_application_export.py  test_applications_docs.py  test_auth.py  test_chat.py  test_cors.py  test_interview.py  test_match.py  test_ops.py
tests/unit/test_bot/: test_handlers.py
tests/unit/test_config/: test_logging.py
tests/unit/test_core/: test_browser.py  test_deadlines.py  test_models.py  test_scheduler.py  test_session.py  test_text.py
tests/unit/test_db/: test_applications_docs.py  test_repository.py
tests/unit/test_documents/: test_coverletter.py  test_embeddings.py  test_latex.py  test_llm.py  test_match.py  test_resume_import.py  test_semantic.py  test_tailor.py
tests/unit/test_notifiers/: test_discord.py  test_email.py  test_send.py  test_telegram.py
tests/unit/test_profile/: test_store.py
tests/unit/test_sources/: test_adzuna.py  test_api_sources.py  test_arbeitnow.py  test_base.py  test_company_boards.py  test_himalayas.py  test_jobspy_source.py  test_registry.py  test_remoteok.py  test_search.py  test_themuse.py  test_usajobs.py  test_wellfound.py
web/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx
web/app/applications/: page.tsx
web/app/chat/: page.tsx
web/app/dashboard/: page.tsx
web/app/interview/: page.tsx
web/app/jobs/: loading.tsx  page.tsx
web/app/legal/: layout.tsx  page.tsx
web/app/legal/compliance/: page.tsx
web/app/legal/privacy/: page.tsx
web/app/legal/terms/: page.tsx
web/app/legal/trust/: page.tsx
web/app/login/: page.tsx
web/app/offline/: page.tsx
web/app/profile/: page.tsx
web/app/profile/edit/: page.tsx
web/app/resumes/: page.tsx
web/app/search/: page.tsx
web/app/settings/: page.tsx
web/app/studio/: page.tsx
web/components/: AiMatch.tsx  CommandPalette.tsx  CustomCursor.tsx  DataTable.tsx  Hero.tsx  Hero3D.tsx  JobActions.tsx  JobDocs.tsx  JobsExplorer.tsx  LocalSetupGuide.tsx  Nav.tsx  Pipeline.tsx  ResumePaper.tsx  Reveal.tsx  SafeBoundary.tsx  ScraperControls.tsx  ScrollProgress.tsx  SearchResultCard.tsx  SentinelLoader.tsx  ServiceWorkerRegistration.tsx  TerminalDemo.tsx  TiltCard.tsx
web/components/ui/: button.tsx  card.tsx  input.tsx  popover-select.tsx  select.tsx  textarea.tsx
web/lib/: api.ts  atsDetect.ts  demo.ts  ghostSignal.ts  utils.ts  visaDetect.ts
web/public/: sw.js
web/tests/: atsDetect.test.ts  ghostSignal.test.ts  utils.test.ts  visaDetect.test.ts
