[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata  (PEP 621)
# ─────────────────────────────────────────────────────────────────────────────
[project]
name            = "job-sentinel"
version         = "0.1.0"
description     = "Site-agnostic job-portal monitor with pluggable adapters and Telegram alerts"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
keywords        = [
  "job", "scraper", "telegram", "bot", "playwright",
  "automation", "job-search", "portal-monitor"
]
authors = [
  { name = "Harshit Wandhare", email = "harshitwandhare45@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]

dependencies = [
  # ── Browser automation ─────────────────────────────────────────────────
  "playwright>=1.44",

  # ── Telegram bot (python-telegram-bot v21, async, Bot API 7.x) ────────
  "python-telegram-bot>=21.0",

  # ── HTTP client (async-capable, replaces requests) ────────────────────
  "httpx[http2]>=0.27",

  # ── Config & validation (pydantic-settings v2, dotenv-native) ─────────
  "pydantic>=2.7",
  "pydantic-settings>=2.3",

  # ── Structured logging (loguru - zero-config, human + JSON output) ─────
  "loguru>=0.7",

  # ── CLI (typer = click on steroids, rich already bundled) ─────────────
  "typer[all]>=0.12",

  # ── Scheduler (APScheduler v3, pure Python, no broker needed) ─────────
  "apscheduler>=3.10",

  # ── DB (sqlite-utils - Simon Willison's ergonomic SQLite wrapper) ──────
  "sqlite-utils>=3.36",

  # ── Retry / resilience ─────────────────────────────────────────────────
  "tenacity>=8.3",

  # ── Rich terminal output (used by typer and logging) ──────────────────
  "rich>=13.7",

  # ── Resume engine: YAML profile + LaTeX templating ────────────────────
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "respx>=0.21",            # httpx mock
  # Linting / formatting (all via ruff — replaces black, flake8, isort, bandit)
  "ruff>=0.4",
  # Type checking
  "mypy>=1.10",
  # Pre-commit
  "pre-commit>=3.7",
  # Stubs
  "types-PyYAML",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[project.scripts]
job-sentinel = "job_sentinel.__main__:app"

[project.urls]
Homepage      = "https://github.com/harshitwandhare/job-sentinel"
Documentation = "https://harshitwandhare.github.io/job-sentinel"
Repository    = "https://github.com/harshitwandhare/job-sentinel"
Issues        = "https://github.com/harshitwandhare/job-sentinel/issues"
Changelog     = "https://github.com/harshitwandhare/job-sentinel/blob/main/CHANGELOG.md"

# ─────────────────────────────────────────────────────────────────────────────
# Hatchling build (src layout)
# ─────────────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/job_sentinel"]

# ─────────────────────────────────────────────────────────────────────────────
# uv  (workspace & Python version pinning)
# ─────────────────────────────────────────────────────────────────────────────
[tool.uv]
dev-dependencies = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff  (linter + formatter — replaces black, flake8, isort, bandit, pydocstyle)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "TCH",      # type-checking imports
  "S",        # bandit security
  "PTH",      # use pathlib over os.path
  "RUF",      # ruff-specific
  "N",        # pep8-naming
  "ERA",      # no commented-out code
]
ignore = [
  "S101",    # assert allowed in tests
  "ERA001",  # sometimes commented code is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["S", "ANN"]
"scripts/**" = ["S", "ANN", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["job_sentinel"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ─────────────────────────────────────────────────────────────────────────────
# Mypy
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
mypy_path              = "src"
plugins                = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["playwright.*", "apscheduler.*", "sqlite_utils.*", "telegram.*"]
ignore_missing_imports = true

# sqlite-utils ships no type information, so calls into it read as "untyped".
# The repository module is the only place that touches it directly; relax the
# untyped-call gate there rather than peppering the codebase with ignores.
[[tool.mypy.overrides]]
module = ["job_sentinel.db.repository"]
disallow_untyped_calls = false

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = [
  "--cov=job_sentinel",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=70",
  "-v",
  "--tb=short",
]
log_cli       = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src/job_sentinel"]
omit   = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]
